accesscontrol: Member model has 2 new fields: business_notices and personal_notices core: AbstractWatchModel introduced core.utils.to_dict() improved kakocase: avg_collection_delay added to OperatorConfig

--- a/foundation/core/fixtures/setup_data.yaml
+++ b/foundation/core/fixtures/setup_data.yaml
@@ -27,6 +27,7 @@
     version: Full
     status: Active
     expiry: 2035-01-01T00:00:00.120Z
+    collaborators_fk_list: [56eb6d04b37b3379b531e012]
 
 - model: core.service
   pk: 56eb6d04b37b3379b531b102
@@ -39,6 +40,7 @@
     version: Full
     status: Active
     expiry: 2035-01-01T00:00:00.120Z
+    collaborators_fk_list: [56eb6d04b37b3379b531e012]
 
 - model: core.config
   fields:
