--- a/foundation/billing/fixtures/billing_members.yaml
+++ b/foundation/billing/fixtures/billing_members.yaml
@@ -5,6 +5,7 @@
     email: arch@ikwen.com
     password: pbkdf2_sha256$12000$nNK3SeCKYSvl$CuoviZNeie9YzaWhukVCi9iQtNmpu3QBbK2yHGHEUxc=  # admin
     phone: 677000001
+    is_superuser: True
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e012
@@ -14,6 +15,7 @@
     password: pbkdf2_sha256$12000$nNK3SeCKYSvl$CuoviZNeie9YzaWhukVCi9iQtNmpu3QBbK2yHGHEUxc=  # admin
     phone: 677000002
     first_name: Tamo
+    last_name: Pokam
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e013
@@ -23,6 +25,7 @@
     password: pbkdf2_sha256$12000$nNK3SeCKYSvl$CuoviZNeie9YzaWhukVCi9iQtNmpu3QBbK2yHGHEUxc=  # admin
     phone: 677000003
     first_name: Foka
+    last_name: Tchuendom
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e014
@@ -32,3 +35,4 @@
     password: pbkdf2_sha256$12000$nNK3SeCKYSvl$CuoviZNeie9YzaWhukVCi9iQtNmpu3QBbK2yHGHEUxc=  # admin
     phone: 677000004
     first_name: Simo
+    last_name: Tchuente
