Members and Collaborators merged into Community

--- a/foundation/accesscontrol/fixtures/ikwen_members.yaml
+++ b/foundation/accesscontrol/fixtures/ikwen_members.yaml
@@ -81,3 +81,8 @@
   pk: 5804b37b3379b531e01eb6d2
   fields:
     name: Collaborator
+
+- model: auth.group
+  pk: 5804b37b3379b531e01eb6d3
+  fields:
+    name: Community
