- Member added to community group upon registration on a service - Profile page preferably displays description over short_description

--- a/foundation/accesscontrol/fixtures/ikwen_members.yaml
+++ b/foundation/accesscontrol/fixtures/ikwen_members.yaml
@@ -56,7 +56,7 @@
 - model: auth.group
   pk: 5804b37b3379b531e01eb6d2
   fields:
-    name: Collaborator
+    name: Collabo
 
 - model: auth.group
   pk: 5804b37b3379b531e01eb6d3
