Core:   - Type Business and Personal of ConsoleEventType deprecated. Not taken into consideration anymore   - add_event can publish an event to a member or a group   - billing.CloudBillingPlan added to Service
Accesscontol:
  - group_fk_list added to Member
  - business_notices deprecated

 Billing:
   - Default OperatorProfile for billing app only platforms
   - processing_fees introduced to manage billing app only platforms
   - separated_billing_cycle removed from settings and moved to platform Config

--- a/billing/fixtures/subscriptions.yaml
+++ b/billing/fixtures/subscriptions.yaml
@@ -2,7 +2,8 @@
   pk: 55eb63379c531e012d04b37a
   fields:
     name: Cool product
-    monthly_cost: 5000
+    duration: 30
+    cost: 5000
     short_description: Cool product for you
 
 - model: billing.subscription
