--- a/accesscontrol/fixtures/ikwen_members.yaml
+++ b/accesscontrol/fixtures/ikwen_members.yaml
@@ -24,6 +24,7 @@
     is_iao: Yes
     is_superuser: Yes
     gender: Male
+    customer_on_fk_list: [56eb6d04b37b3379b531b101]
     collaborates_on_fk_list: [56eb6d04b37b3379b531b102]
 
 - model: accesscontrol.member
