--- a/billing/fixtures/ik_billing_setup_data.yaml
+++ b/billing/fixtures/ik_billing_setup_data.yaml
@@ -119,9 +119,9 @@
 - model: billing.paymentmean
   pk: 5880870e4fc0c229da8da3d2
   fields:
-    name: Mobile Money
-    slug: jumbopay-momo
-    credentials: '{"api_key":"jp-api-key"}'
+    name: MTN Mobile Money
+    slug: mtn-momo
+    credentials: '{"merchant_email":"merchant@ikwen.com"}'
     action_url_name: billing:momo_set_checkout
     logo: logo.png
     watermark: watermark.png
