--- a/accesscontrol/fixtures/ikwen_members.yaml
+++ b/accesscontrol/fixtures/ikwen_members.yaml
@@ -11,8 +11,10 @@
     first_name: Arch
     last_name: Soft
     full_name: Soft Arch
+    email_verified: Yes
     gender: Male
     collaborates_on_fk_list: [56eb6d04b37b3379b531b101]
+    tags: member1 arch
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e012
@@ -26,8 +28,10 @@
     is_superuser: Yes
     is_bao: Yes
     gender: Male
+    email_verified: Yes
     customer_on_fk_list: [56eb6d04b37b3379b531b101]
     collaborates_on_fk_list: [56eb6d04b37b3379b531b102]
+    tags: member2
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e013
@@ -41,6 +45,7 @@
     full_name: Foka Tchuendom
     gender: Male
     collaborates_on_fk_list: [56eb6d04b37b3379b531b101]
+    tags: member3
 
 - model: accesscontrol.member
   pk: 56eb6d04b37b3379b531e014
@@ -54,6 +59,7 @@
     full_name: Simo Tchuente
     gender: Female
     collaborates_on_fk_list: [56eb6d04b37b3379b531b102]
+    tags: member4
 
 - model: auth.group
   pk: 5804b37b3379b531e01eb6d1
