Implementation of smart revivals unit tests

--- a/revival/fixtures/member_profiles.yaml
+++ b/revival/fixtures/member_profiles.yaml
@@ -16,10 +16,24 @@
     name: Kakocase
     slug: kakocase
 
+- model: revival.profiletag
+  pk: 58088fc0c253e5ddf0563954
+  fields:
+    name: Join
+    slug: __Join
+    is_auto: Yes
+
+- model: revival.profiletag
+  pk: 58088fc0c253e5ddf0563955
+  fields:
+    name: Referral
+    slug: __Referral
+    is_auto: Yes
+
 - model: revival.memberprofile
   fields:
     member: 56eb6d04b37b3379b531e011
-    tag_list: [men, kakocase]
+    tag_list: [men, kakocase, __Referral]
 
 - model: revival.memberprofile
   fields:
@@ -34,29 +48,4 @@
 - model: revival.memberprofile
   fields:
     member: 56eb6d04b37b3379b531e014
-    tag_list: [women]
-
-- model: revival.cyclicrevival
-  pk: 56eb6d04b37b3379b3e5ddf1
-  fields:
-    service: 56eb6d04b37b3379b531b102
-    profile_tag_id: 58088fc0c253e5ddf0563951
-    mail_subject: Subject
-    days_cycle: 3
-    end_on: 2035-01-01
-
-- model: revival.cyclicrevival
-  pk: 56eb6d04b37b3379b3e5ddf2
-  fields:
-    service: 56eb6d04b37b3379b531b102
-    profile_tag_id: 58088fc0c253e5ddf0563951
-    mail_subject: Subject
-    end_on: 2035-01-01
-
-- model: revival.cyclicrevival
-  pk: 56eb6d04b37b3379b3e5ddf3
-  fields:
-    service: 56eb6d04b37b3379b531b102
-    profile_tag_id: 58088fc0c253e5ddf0563951
-    mail_subject: Subject
-    end_on: 2035-01-01
+    tag_list: [women, __Join]
