Standalone billing app RC-1

--- a/billing/fixtures/ik_billing_setup_data.yaml
+++ b/billing/fixtures/ik_billing_setup_data.yaml
@@ -21,6 +21,7 @@
     monthly_cost: 15000
     version: Full
     status: Active
+    api_signature: top_secret_token
 
 - model: core.config
   fields:
