Standalone billing app RC-1. Cash in tests

--- a/billing/fixtures/invoices.yaml
+++ b/billing/fixtures/invoices.yaml
@@ -28,6 +28,7 @@
 - model: billing.invoice
   pk: 56eb6d04b379d531e01237d3
   fields:
+    member: 56eb6d04b37b3379b531e013
     subscription: 56eb6d04b37b3379c531e013
     number: A3
     amount: 5000
